Fix message box z-index

--- a/css/style.scss
+++ b/css/style.scss
@@ -188,6 +188,7 @@ body {
     padding: 30px;
     background-color: #fff;
     display: none;
+    z-index: 100;
 
     &__head {
         
